objects/UNITY_EmailDomainMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps default field values on Case based on email domain or email address.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>This field specifies what Business Unit on the Case is applicable to the case based on &quot;To&quot; email address domain for Email-to-Case</description>
        <label>Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <description>This field specifies what Case Origin is applicable to the case based on &quot;To&quot; email address domain for Email-to-Case</description>
        <label>Case Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Name of the Case Owner - Queue/User</description>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email_Domain__c</fullName>
        <description>Domain for the &quot;To&quot; email address</description>
        <label>To Email Domain</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>UNITY Email Domain Map</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case_Origin__c</columns>
        <columns>To_Email_Domain__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>